solved  image issue

--- a/physics-rough.html
+++ b/physics-rough.html
@@ -108,7 +108,7 @@
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="images/physics-rough fair book/5.jpeg" alt="Page 5">
+      <img src="physics-rough fair book/5.jpeg" alt="Page 5">
       <div class="caption">Page 5</div>
     </div>
   </section>
