problem has been fixed

--- a/computer-science.html
+++ b/computer-science.html
@@ -96,7 +96,7 @@
   </section>
    <section class="gallery">
     <div class="card">
-      <img srcComputer Science Fair book/3.jpeg" alt="Page 3">
+      <img src="Computer Science Fair book/3.jpeg" alt="Page 3">
       <div class="caption">Page 3</div>
     </div>
   </section>
