--- a/maths.html
+++ b/maths.html
@@ -132,92 +132,92 @@
     </section>
      <section class="gallery">
     <div class="card">
-      <img src="images/maths fair book/9.jpeg" alt="Maths Page 9">
+      <img src="maths fair book/9.jpeg" alt="Maths Page 9">
       <div class="caption">Page 9</div>
     </div>
   </section>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="images/maths fair book/10.jpeg" alt="Maths Page 10">
+      <img src="maths fair book/10.jpeg" alt="Maths Page 10">
       <div class="caption">Page 10</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="images/maths fair book/11.jpeg" alt="Maths Page 11">
+      <img src="maths fair book/11.jpeg" alt="Maths Page 11">
       <div class="caption">Page 11</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="images/maths fair book/12.jpeg" alt="Maths Page 12">
+      <img src="maths fair book/12.jpeg" alt="Maths Page 12">
       <div class="caption">Page 12</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="images/maths fair book/13.jpeg" alt="Maths Page 13">
+      <img src="maths fair book/13.jpeg" alt="Maths Page 13">
       <div class="caption">Page 13</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="images/maths fair book/14.jpeg" alt="Maths Page 14">
+      <img src="maths fair book/14.jpeg" alt="Maths Page 14">
       <div class="caption">Page 14</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="images/maths fair book/15.jpeg" alt="Maths Page 15">
+      <img src="maths fair book/15.jpeg" alt="Maths Page 15">
       <div class="caption">Page 15</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="images/maths fair book/16.jpeg" alt="Maths Page 16">
+      <img src="maths fair book/16.jpeg" alt="Maths Page 16">
       <div class="caption">Page 16</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="images/maths fair book/17.jpeg" alt="Maths Page 17">
+      <img src="maths fair book/17.jpeg" alt="Maths Page 17">
       <div class="caption">Page 17</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="images/maths fair book/18.jpeg" alt="Maths Page 18">
+      <img src="maths fair book/18.jpeg" alt="Maths Page 18">
       <div class="caption">Page 18</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="images/maths fair book/19.jpeg" alt="Maths Page 19">
+      <img src="maths fair book/19.jpeg" alt="Maths Page 19">
       <div class="caption">Page 19</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="images/maths fair book/20.jpeg" alt="Maths Page 20">
+      <img src="maths fair book/20.jpeg" alt="Maths Page 20">
       <div class="caption">Page 20</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="images/maths fair book/21.jpeg" alt="Maths Page 21">
+      <img src="maths fair book/21.jpeg" alt="Maths Page 21">
       <div class="caption">Page 21</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="images/maths fair book/22.jpeg" alt="Maths Page 22">
+      <img src="maths fair book/22.jpeg" alt="Maths Page 22">
       <div class="caption">Page 22</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="images/maths fair book/23.jpeg" alt="Maths Page 23">
+      <img src="maths fair book/23.jpeg" alt="Maths Page 23">
       <div class="caption">Page 23</div>
     </div>
   </section>
