--- a/index.html
+++ b/index.html
@@ -90,10 +90,20 @@
     &copy; 2025 Fair Book Gallery | Designed by Ameer Ali Ranjhani
   </footer>
 <script>
-  window.addEventListener('load', function () {
-    document.getElementById('preloader').style.display = 'none';
+  window.addEventListener('load', () => {
+    const preloader = document.getElementById('preloader');
+    const content = document.getElementById('content');
+
+    setTimeout(() => {
+      preloader.style.opacity = '0';
+      setTimeout(() => {
+        preloader.style.display = 'none';
+        content.style.display = 'block';
+      }, 600);
+    }, 2000); 
   });
 </script>
+
 </body>
 
 </body>
