added something new

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Class 10th Fair books</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="png" href="Untitled_Project__1_-removebg-preview (1).png">
+
   <style>
     body {
       margin: 0;
