added background image

--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
   </style>
 </head>
 
-<body>
+<body  style="background-image: url('Untitled_Project__1_-removebg-preview\ \(1\).png'); background-repeat: no-repeat; background-position: center; background-size: 300px 250px; background-attachment: fixed;">
+
+  
 
   <!-- Preloader -->
   <div id="preloader">
