--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
       color: #111827;
     }
 
+    .fixed-background {
+      .fixed-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('your-image.jpg'); /* Replace with your image URL */
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: -1; /* Ensures the background stays behind other content */
+}
+    }
+
     header {
       background: #1e3a8a;
       color: white;
@@ -65,6 +79,7 @@
 
 <body  style="background-image: url('Untitled_Project__1_-removebg-preview\ \(1\).png'); background-repeat: no-repeat; background-position: center; background-size: 300px 250px; background-attachment: fixed;">
 
+  <div class="fixed-background"></div>
   
 
   <!-- Preloader -->
