--- a/index.html
+++ b/index.html
@@ -15,18 +15,16 @@
       color: #111827;
     }
 
-      .fixed-background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url('your-image.jpg'); /* Replace with your image URL */
-  background-size: cover;
-  background-repeat: no-repeat;
-  z-index: -1; /* Ensures the background stays behind other content */
-}
-  
+   body {
+      background-image: url('Untitled_Project__1_-removebg-preview\ \(1\).png');
+      background-size: cover;      
+      background-repeat: no-repeat; 
+      background-position: center;  
+      background-size: 300px 200px;
+      background-attachment: fixed;
+      background-color: white;
+
+    }
 
     header {
       background: #1e3a8a;
@@ -76,11 +74,9 @@
   </style>
 </head>
 
-<body  style="background-image: url('Untitled_Project__1_-removebg-preview\ \(1\).png'); background-repeat: no-repeat; background-position: center; background-size: 300px 250px; background-attachment: fixed;">
+<body>
 
-  <div class="fixed-background"></div>
   
-
   <!-- Preloader -->
   <div id="preloader">
     <div class="loader"> </div>
