--- a/english-exercise.html
+++ b/english-exercise.html
@@ -66,6 +66,16 @@
       background-color: #374bb3;
     }
 
+    .lazy-img {
+  filter: blur(10px);
+  opacity: 0;
+  transition: filter 0.5s ease, opacity 0.5s ease;
+}
+.lazy-img.loaded {
+  filter: blur(0);
+  opacity: 2;
+}
+
     footer {
       text-align: center;
       padding: 1rem;
@@ -84,163 +94,163 @@
 
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/1.jpeg" alt="Page 1">
+      <img src="English-Exercise Fair book/1.jpeg" loading="lazy" class="lazy-img" alt="Page 1">
       <div class="caption">Page 1</div>
     </div>
     </section>
     <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/2.jpeg" alt="Page 2">
+      <img src="English-Exercise Fair book/2.jpeg" loading="lazy" class="lazy-img" alt="Page 2">
       <div class="caption">Page 2</div>
     </div>
     </section>
     <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/3.jpeg" alt="Page 3">
+      <img src="English-Exercise Fair book/3.jpeg" loading="lazy" class="lazy-img" alt="Page 3">
       <div class="caption">Page 3</div>
     </div>
   </section>
 <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/4.jpeg" alt="Page 4">
+      <img src="English-Exercise Fair book/4.jpeg" loading="lazy" class="lazy-img" alt="Page 4">
       <div class="caption">Page 4</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/5.jpeg" alt="Page 5">
+      <img src="English-Exercise Fair book/5.jpeg" loading="lazy" class="lazy-img" alt="Page 5">
       <div class="caption">Page 5</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/6.jpeg" alt="Page 6">
+      <img src="English-Exercise Fair book/6.jpeg" loading="lazy" class="lazy-img" alt="Page 6">
       <div class="caption">Page 6</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/7.jpeg" alt="Page 7">
+      <img src="English-Exercise Fair book/7.jpeg" loading="lazy" class="lazy-img" alt="Page 7">
       <div class="caption">Page 7</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/8.jpeg" alt="Page 8">
+      <img src="English-Exercise Fair book/8.jpeg" loading="lazy" class="lazy-img" alt="Page 8">
       <div class="caption">Page 8</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/9.jpeg" alt="Page 9">
+      <img src="English-Exercise Fair book/9.jpeg" loading="lazy" class="lazy-img" alt="Page 9">
       <div class="caption">Page 9</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/3.jpeg" alt="Page 10">
+      <img src="English-Exercise Fair book/3.jpeg" loading="lazy" class="lazy-img" alt="Page 10">
       <div class="caption">Page 10</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/11.jpeg" alt="Page 11">
+      <img src="English-Exercise Fair book/11.jpeg" loading="lazy" class="lazy-img" alt="Page 11">
       <div class="caption">Page 11</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/12.jpeg" alt="Page 12">
+      <img src="English-Exercise Fair book/12.jpeg" loading="lazy" class="lazy-img" alt="Page 12">
       <div class="caption">Page 12</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/13.jpeg" alt="Page 13">
+      <img src="English-Exercise Fair book/13.jpeg" loading="lazy" class="lazy-img" alt="Page 13">
       <div class="caption">Page 13</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/14.jpeg" alt="Page 14">
+      <img src="English-Exercise Fair book/14.jpeg" loading="lazy" class="lazy-img" alt="Page 14">
       <div class="caption">Page 14</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/15.jpeg" alt="Page 15">
+      <img src="English-Exercise Fair book/15.jpeg" loading="lazy" class="lazy-img" alt="Page 15">
       <div class="caption">Page 15</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/16.jpeg" alt="Page 16">
+      <img src="English-Exercise Fair book/16.jpeg" loading="lazy" class="lazy-img" alt="Page 16">
       <div class="caption">Page 16</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/17.jpeg" alt="Page 17">
+      <img src="English-Exercise Fair book/17.jpeg" loading="lazy" class="lazy-img" alt="Page 17">
       <div class="caption">Page 17</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/18.jpeg" alt="Page 18">
+      <img src="English-Exercise Fair book/18.jpeg" loading="lazy" class="lazy-img" alt="Page 18">
       <div class="caption">Page 18</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/19.jpeg" alt="Page 19">
+      <img src="English-Exercise Fair book/19.jpeg" loading="lazy" class="lazy-img" alt="Page 19">
       <div class="caption">Page 19</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/20.jpeg" alt="Page 20">
+      <img src="English-Exercise Fair book/20.jpeg" loading="lazy" class="lazy-img" alt="Page 20">
       <div class="caption">Page 20</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/21.jpeg" alt="Page 21">
+      <img src="English-Exercise Fair book/21.jpeg" loading="lazy" class="lazy-img" alt="Page 21">
       <div class="caption">Page 21</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/22.jpeg" alt="Page 22">
+      <img src="English-Exercise Fair book/22.jpeg" loading="lazy" class="lazy-img" alt="Page 22">
       <div class="caption">Page 22</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/23.jpeg" alt="Page 23">
+      <img src="English-Exercise Fair book/23.jpeg" loading="lazy" class="lazy-img" alt="Page 23">
       <div class="caption">Page 23</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/24.jpeg" alt="Page 24">
+      <img src="English-Exercise Fair book/24.jpeg" loading="lazy" class="lazy-img" alt="Page 24">
       <div class="caption">Page 24</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/25.jpeg" alt="Page 25">
+      <img src="English-Exercise Fair book/25.jpeg" loading="lazy" class="lazy-img" alt="Page 25">
       <div class="caption">Page 25</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/26.jpeg" alt="Page 26">
+      <img src="English-Exercise Fair book/26.jpeg" loading="lazy" class="lazy-img" alt="Page 26">
       <div class="caption">Page 26</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="English-Exercise Fair book/27.jpeg" alt="Page 27">
+      <img src="English-Exercise Fair book/27.jpeg" loading="lazy" class="lazy-img" alt="Page 27">
       <div class="caption">Page 27</div>
     </div>
   </section>
@@ -249,5 +259,11 @@
     &copy; 2025 English – Exercise | Fair Book Gallery
   </footer>
 
+  <script> document.querySelectorAll('img.lazy-img').forEach(img => {
+  img.addEventListener('load', () => {
+    img.classList.add('loaded');
+  });
+});
+</script>
 </body>
 </html>
