--- a/maths.html
+++ b/maths.html
@@ -66,6 +66,15 @@
       background-color: #1e3a8a;
     }
 
+         .lazy-img {
+  filter: blur(10px);
+  opacity: 0;
+  transition: filter 0.5s ease, opacity 0.5s ease;
+}
+.lazy-img.loaded {
+  filter: blur(0);
+  opacity: 2;
+}
     footer {
       text-align: center;
       padding: 1rem;
@@ -84,144 +93,151 @@
 
   <section class="gallery">
     <div class="card">
-      <img src="maths fair book/1.jpeg" alt="Maths Page 1">
+      <img src="maths fair book/1.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 1">
       <div class="caption">Page 1</div>
     </div>
     </section>
     <section class="gallery">
     <div class="card">
-      <img src="maths fair book/2.jpeg" alt="Maths Page 2">
+      <img src="maths fair book/2.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 2">
       <div class="caption">Page 2</div>
     </div>
     </section>
     <section class="gallery">
     <div class="card">
-      <img src="maths fair book/3.jpeg" alt="Maths Page 3">
+      <img src="maths fair book/3.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 3">
       <div class="caption">Page 3</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="maths fair book/4.jpeg" alt="Maths Page 4">
+      <img src="maths fair book/4.jpeg"   loading="lazy" class="lazy-img" alt="Maths Page 4">
       <div class="caption">Page 4</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="maths fair book/5.jpeg" alt="Maths Page 5">
+      <img src="maths fair book/5.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 5">
       <div class="caption">Page 5</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="maths fair book/6.jpeg" alt="Maths Page 6">
+      <img src="maths fair book/6.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 6">
       <div class="caption">Page 6</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="maths fair book/7.jpeg" alt="Maths Page 7">
+      <img src="maths fair book/7.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 7">
       <div class="caption">Page 7</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="maths fair book/8.jpeg" alt="Maths Page 8">
+      <img src="maths fair book/8.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 8">
       <div class="caption">Page 8</div>
     </div>
     </section>
      <section class="gallery">
     <div class="card">
-      <img src="maths fair book/9.jpeg" alt="Maths Page 9">
+      <img src="maths fair book/9.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 9">
       <div class="caption">Page 9</div>
     </div>
   </section>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="maths fair book/10.jpeg" alt="Maths Page 10">
+      <img src="maths fair book/10.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 10">
       <div class="caption">Page 10</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="maths fair book/11.jpeg" alt="Maths Page 11">
+      <img src="maths fair book/11.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 11">
       <div class="caption">Page 11</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="maths fair book/12.jpeg" alt="Maths Page 12">
+      <img src="maths fair book/12.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 12">
       <div class="caption">Page 12</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="maths fair book/13.jpeg" alt="Maths Page 13">
+      <img src="maths fair book/13.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 13">
       <div class="caption">Page 13</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="maths fair book/14.jpeg" alt="Maths Page 14">
+      <img src="maths fair book/14.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 14">
       <div class="caption">Page 14</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="maths fair book/15.jpeg" alt="Maths Page 15">
+      <img src="maths fair book/15.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 15">
       <div class="caption">Page 15</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="maths fair book/16.jpeg" alt="Maths Page 16">
+      <img src="maths fair book/16.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 16">
       <div class="caption">Page 16</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="maths fair book/17.jpeg" alt="Maths Page 17">
+      <img src="maths fair book/17.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 17">
       <div class="caption">Page 17</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="maths fair book/18.jpeg" alt="Maths Page 18">
+      <img src="maths fair book/18.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 18">
       <div class="caption">Page 18</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="maths fair book/19.jpeg" alt="Maths Page 19">
+      <img src="maths fair book/19.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 19">
       <div class="caption">Page 19</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="maths fair book/20.jpeg" alt="Maths Page 20">
+      <img src="maths fair book/20.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 20">
       <div class="caption">Page 20</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="maths fair book/21.jpeg" alt="Maths Page 21">
+      <img src="maths fair book/21.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 21">
       <div class="caption">Page 21</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="maths fair book/22.jpeg" alt="Maths Page 22">
+      <img src="maths fair book/22.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 22">
       <div class="caption">Page 22</div>
     </div>
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="maths fair book/23.jpeg" alt="Maths Page 23">
+      <img src="maths fair book/23.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 23">
       <div class="caption">Page 23</div>
     </div>
   </section>
     <a href="index.html" class="back-btn">← Back to Home</a>
+
+          <script> document.querySelectorAll('img.lazy-img').forEach(img => {
+  img.addEventListener('load', () => {
+    img.classList.add('loaded');
+  });
+});
+</script>
 
   <footer>
     &copy; 2025 Maths – Fair Book | Gallery by Ameer Ali Ranjhani
