--- a/urdu.html
+++ b/urdu.html
@@ -66,6 +66,15 @@
       background-color: #1e3a8a;
     }
 
+         .lazy-img {
+  filter: blur(10px);
+  opacity: 0;
+  transition: filter 0.5s ease, opacity 0.5s ease;
+}
+.lazy-img.loaded {
+  filter: blur(0);
+  opacity: 2;
+}
     footer {
       text-align: center;
       padding: 1rem;
@@ -84,118 +93,124 @@
 
   <section class="gallery">
     <div class="card">
-      <img src="Urdu fair book/1.jpeg" alt="Page 1">
+      <img src="Urdu fair book/1.jpeg"  loading="lazy" class="lazy-img"  alt="Page 1">
       <div class="caption">Page 1</div>
     </div>
     </section>
     <section class="gallery">
     <div class="card">
-      <img src="Urdu fair book/2.jpeg" alt="Page 2">
+      <img src="Urdu fair book/2.jpeg"  loading="lazy" class="lazy-img"  alt="Page 2">
       <div class="caption">Page 2</div>
     </div>
     </section>
     <section class="gallery">
     <div class="card">
-      <img src="Urdu fair book/3.jpeg" alt="Page 3">
+      <img src="Urdu fair book/3.jpeg"  loading="lazy" class="lazy-img"  alt="Page 3">
       <div class="caption">Page 3</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="Urdu fair book/4.jpeg" alt="Page 4">
+      <img src="Urdu fair book/4.jpeg"  loading="lazy" class="lazy-img"  alt="Page 4">
       <div class="caption">Page 4</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="Urdu fair book/5.jpeg" alt="Page 5">
+      <img src="Urdu fair book/5.jpeg"  loading="lazy" class="lazy-img"  alt="Page 5">
       <div class="caption">Page 5</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="Urdu fair book/6.jpeg" alt="Page 6">
+      <img src="Urdu fair book/6.jpeg"  loading="lazy" class="lazy-img"  alt="Page 6">
       <div class="caption">Page 6</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="Urdu fair book/7.jpeg" alt="Page 7">
+      <img src="Urdu fair book/7.jpeg"  loading="lazy" class="lazy-img"  alt="Page 7">
       <div class="caption">Page 7</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="Urdu fair book/8.jpeg" alt="Page 8">
+      <img src="Urdu fair book/8.jpeg"  loading="lazy" class="lazy-img"  alt="Page 8">
       <div class="caption">Page 8</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="Urdu fair book/9.jpeg" alt="Page 9">
+      <img src="Urdu fair book/9.jpeg"  loading="lazy" class="lazy-img"  alt="Page 9">
       <div class="caption">Page 9</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="Urdu fair book/10.jpeg" alt="Page 10">
+      <img src="Urdu fair book/10.jpeg"  loading="lazy" class="lazy-img"  alt="Page 10">
       <div class="caption">Page 10</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="Urdu fair book/11.jpeg" alt="Page 11">
+      <img src="Urdu fair book/11.jpeg"  loading="lazy" class="lazy-img"  alt="Page 11">
       <div class="caption">Page 11</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="Urdu fair book/12.jpeg" alt="Page 12">
+      <img src="Urdu fair book/12.jpeg"  loading="lazy" class="lazy-img"  alt="Page 12">
       <div class="caption">Page 12</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="Urdu fair book/13.jpeg" alt="Page 13">
+      <img src="Urdu fair book/13.jpeg"  loading="lazy" class="lazy-img"  alt="Page 13">
       <div class="caption">Page 13</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="Urdu fair book/14.jpeg" alt="Page 14">
+      <img src="Urdu fair book/14.jpeg"  loading="lazy" class="lazy-img"  alt="Page 14">
       <div class="caption">Page 14</div>
     </div>
   </section>
-  <a href="index.html" class="back-btn">← Back to Home</a>
   <br>
   <hr>
   <h1 style="font-size: 3rem; margin: 0%; text-align: center; color: #1e3a8a; ">Grammar Section</h1>
   <section class="gallery">
     <div class="card">
-        <img src="Urdu fair book/1.1.jpeg" alt="Page 1.1">
+        <img src="Urdu fair book/1.1.jpeg"  loading="lazy" class="lazy-img"  alt="Page 1.1">
         <div class="caption">Page 1.1</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-        <img src="Urdu fair book/1.2.jpeg" alt="Page 1.2">
+        <img src="Urdu fair book/1.2.jpeg"  loading="lazy" class="lazy-img"  alt="Page 1.2">
         <div class="caption">Page 1.2</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-        <img src="Urdu fair book/1.3.jpeg" alt="Page 1.3">
+        <img src="Urdu fair book/1.3.jpeg"  loading="lazy" class="lazy-img"  alt="Page 1.3">
         <div class="caption">Page 1.3</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-        <img src="Urdu fair book/1.4.jpeg" alt="Page 1.4">
+        <img src="Urdu fair book/1.4.jpeg"  loading="lazy" class="lazy-img"  alt="Page 1.4">
         <div class="caption">Page 1.4</div>
     </div>
   </section>
 
    <a href="index.html" class="back-btn">← Back to Home</a>
+
+         <script> document.querySelectorAll('img.lazy-img').forEach(img => {
+  img.addEventListener('load', () => {
+    img.classList.add('loaded');
+  });
+});
+</script>
 
   <footer>
     &copy; 2025 Urdu – Fair Book | Gallery by Ameer Ali Ranjhani
