Some new implements

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
     h1 {
   font-weight: 700;
-  font-size: 2.5rem;
+  font-size: 2rem;
+  text-align: center;
     }
 
     .container {
@@ -56,7 +57,7 @@
     footer {
       text-align: center;
       padding: 1rem;
-      background: #e2e8f0;
+      background: gray;
       margin-top: 2rem;
       font-size: 0.9rem;
     }
@@ -70,9 +71,8 @@
   <div class="spinner"></div>
 </div>
 
-
   <header>
-    <h1>🧾 School Fair Bosoks (Class 10th)</h1>
+    <h1>🧾 School Fair Books (Class 10th)</h1>
     <p>Click on a subject to view daily fair book pictures</p>
   </header>
   <h2 style="font-size: 30px; text-align: center; background: linear-gradient(to right, #26fd43 , #6b0d88, #6b0d88, #0000FF,#d61e1e, #c2ce19);   -webkit-text-fill-color: transparent;   -webkit-background-clip: text;">Al-Kausar High School Johi</h2>
@@ -90,7 +90,7 @@
   </main>
 
   <footer>
-    &copy; 2025 Fair Book Gallery | Designed by Ameer Ali Ranjhani
+    &copy; <strong>2025 Fair Book Gallery | Designed by Ameer Ali Ranjhani</strong>
   </footer>
 
 <script>
