Added 24 to 31 images in maths

--- a/maths.html
+++ b/maths.html
@@ -226,8 +226,50 @@
   </section>
    <section class="gallery">
     <div class="card">
-      <img src="maths fair book/23.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 23">
-      <div class="caption">Page 23</div>
+      <img src="maths fair book/24.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 24">
+      <div class="caption">Page 24</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/25.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 25">
+      <div class="caption">Page 25</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/26.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 26">
+      <div class="caption">Page 26</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/27.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 27">
+      <div class="caption">Page 27</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/28.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 28">
+      <div class="caption">Page 28</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/29.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 29">
+      <div class="caption">Page 29</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/30.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 30">
+      <div class="caption">Page 30</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/31.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 31">
+      <div class="caption">Page 31</div>
     </div>
   </section>
     <a href="index.html" class="back-btn">← Back to Home</a>
