Added 23 image in maths

--- a/maths.html
+++ b/maths.html
@@ -226,6 +226,12 @@
   </section>
    <section class="gallery">
     <div class="card">
+      <img src="maths fair book/23.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 23">
+      <div class="caption">Page 23</div>
+    </div>
+  </section>
+   <section class="gallery">
+    <div class="card">
       <img src="maths fair book/24.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 24">
       <div class="caption">Page 24</div>
     </div>
