--- a/index.html
+++ b/index.html
@@ -54,10 +54,34 @@
       background: linear-gradient(to right, #2c51b9, #1e3a8a);
     }
 
+
+        div {
+      max-width: 800px;
+      margin: 50px auto;
+      padding: 25px;
+      background-color: white;
+      border-left: 6px solid #1e3a8a;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    h2 {
+      margin-top: 0;
+      color: #1e3a8a;
+    }
+
+    p {
+      color: #333;
+      font-size: 16px;
+      line-height: 1.6;
+    }
+
+    
     footer {
       text-align: center;
       padding: 1rem;
-      background: gray;
+      background: rgb(226, 221, 221);
       margin-top: 2rem;
       font-size: 0.9rem;
     }
@@ -65,7 +89,6 @@
 </head>
 
 <body>
-
   
 <div id="loader">
   <div class="spinner"></div>
@@ -73,10 +96,9 @@
 
   <header>
     <h1>🧾 School Fair Books (Class 10th)</h1>
-    <p>Click on a subject to view daily fair book pictures</p>
+    <pre>Click on a subject to view daily fair book pictures</pre>
   </header>
   <h2 style="font-size: 30px; text-align: center; background: linear-gradient(to right, #26fd43 , #6b0d88, #6b0d88, #0000FF,#d61e1e, #c2ce19);   -webkit-text-fill-color: transparent;   -webkit-background-clip: text;">Al-Kausar High School Johi</h2>
-
   <main class="container">
     <a href="english-exercise.html" class="card">English – Exercise</a>
     <a href="pak-study.html" class="card">Pakistan Studies</a>
@@ -88,7 +110,24 @@
     <a href="computer-science.html" class="card">Computer Science</a>
     <a href="urdu.html" class="card">Urdu</a>
   </main>
+<div>
+  <pre style="font-size: 25px; margin-top: 0%; color: #1e3a8a;">  Note:</pre>
+      <ol>
+        <li> <strong>Added Maths Exercise: 17.4 on 05-08-2024.</strong> </li>
+        <li><strong>Images can be uploaded late.</strong></li>
+        <li><strong>Wait for images.</strong></li>
+        <li><strong>You should check and reload this website, and refer to Note 1 to see if the images have been uploaded.</strong></li>
+      </ol>
+      </div>
 
+  <div>
+    <h2>Website Objective</h2>
+    <p>
+      The objective of this website is to provide students with an organized and user-friendly platform 
+      to upload, view, and manage their subject-wise fair book images on a daily basis. It ensures easy access, 
+      visual clarity, and proper categorization of academic work.
+    </p>
+  </div>
   <footer>
     &copy; <strong>2025 Fair Book Gallery | Designed by Ameer Ali Ranjhani</strong>
   </footer>
