--- a/index.html
+++ b/index.html
@@ -123,9 +123,7 @@
   <div>
     <h2>Website Objective</h2>
     <p>
-      The objective of this website is to provide students with an organized and user-friendly platform 
-      to upload, view, and manage their subject-wise fair book images on a daily basis. It ensures easy access, 
-      visual clarity, and proper categorization of academic work.
+      This website has been created to help my classmates by providing a simple platform where they can view subject-wise images of fair book work. They can easily check the photos and write their own fair books correctly and on time.
     </p>
   </div>
   <footer>
