--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Class 10th Fair books</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="png" href="Untitled_Project__1_-removebg-preview (1).png">
+  <link rel="icon" type="image/png" href="Untitled_Project__1_-removebg-preview (1).png">
 
   <style>
     body {
@@ -14,8 +14,12 @@
       color: #111827;
     }
 
+    html {
+      scroll-behavior: smooth;
+    }
+
     header {
-      background: linear-gradient(to right, #1e3a8a, #2c51b9);;
+      background: linear-gradient(to right, #1e3a8a, #2c51b9);
       color: white;
       padding: 1rem 2rem;
       text-align: center;
@@ -23,9 +27,9 @@
     }
 
     h1 {
-  font-weight: 700;
-  font-size: 2rem;
-  text-align: center;
+      font-weight: 700;
+      font-size: 2rem;
+      text-align: center;
     }
 
     .container {
@@ -54,8 +58,7 @@
       background: linear-gradient(to right, #2c51b9, #1e3a8a);
     }
 
-
-        div {
+    .div-box {
       max-width: 800px;
       margin: 50px auto;
       padding: 25px;
@@ -77,7 +80,6 @@
       line-height: 1.6;
     }
 
-    
     footer {
       text-align: center;
       padding: 1rem;
@@ -85,20 +87,48 @@
       margin-top: 2rem;
       font-size: 0.9rem;
     }
+
+    #loader {
+      position: fixed;
+      z-index: 9999;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .spinner {
+      border: 6px solid #f3f3f3;
+      border-top: 6px solid #1e3a8a;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
   </style>
 </head>
 
 <body>
-  
-<div id="loader">
-  <div class="spinner"></div>
-</div>
+  <div id="loader">
+    <div class="spinner"></div>
+  </div>
 
   <header>
-    <h1>🧾 School Fair Books (Class 10th)</h1>
-    <pre>Click on a subject to view daily fair book pictures</pre>
+    <h1>📚  School Fair Books (Class 10th)</h1>
+    <h4>Click on a subject to view daily fair book pictures</h4>
   </header>
-  <h2 style="font-size: 30px; text-align: center; background: linear-gradient(to right, #26fd43 , #6b0d88, #6b0d88, #0000FF,#d61e1e, #c2ce19);   -webkit-text-fill-color: transparent;   -webkit-background-clip: text;">Al-Kausar High School Johi</h2>
+
+  <h2 style="font-size: 30px; text-align: center; background: linear-gradient(to right, #26fd43 , #6b0d88, #6b0d88, #0000FF,#d61e1e, #c2ce19); -webkit-text-fill-color: transparent; -webkit-background-clip: text;">Al-Kausar High School Johi</h2>
+
   <main class="container">
     <a href="english-exercise.html" class="card">English – Exercise</a>
     <a href="pak-study.html" class="card">Pakistan Studies</a>
@@ -110,37 +140,32 @@
     <a href="computer-science.html" class="card">Computer Science</a>
     <a href="urdu.html" class="card">Urdu</a>
   </main>
-<div>
-  <pre style="font-size: 25px; margin-top: 0%; color: #1e3a8a;">  Note:</pre>
-      <ol>
-        <li> <strong>Added Maths Exercise: 17.4 on 05-08-2024.</strong> </li>
-        <li><strong>Images can be uploaded late.</strong></li>
-        <li><strong>Wait for images.</strong></li>
-        <li><strong>You should check and reload this website, and refer to Note 1 to see if the images have been uploaded.</strong></li>
-      </ol>
-      </div>
 
-  <div>
-    <h2>Website Objective</h2>
-    <p>
-      This website has been created to help my classmates by providing a simple platform where they can view subject-wise images of fair book work. They can easily check the photos and write their own fair books correctly and on time.
-    </p>
+  <div class="div-box">
+    <h2>Note:</h2>
+    <ol>
+      <li><strong>Added Maths Exercise: 17.4 on 05-08-2024.</strong></li>
+      <li><strong>Images can be uploaded late.</strong></li>
+      <li><strong>Wait for images.</strong></li>
+      <li><strong>Please reload the website and refer to Note 1 to check if new images have been uploaded.</strong></li>
+    </ol>
   </div>
+
+  <div class="div-box">
+    <h2>Website Objective</h2>
+    <p>This website has been created to help my classmates by providing a simple platform where they can view subject-wise images of fair book work. They can easily check the photos and write their own fair books correctly and on time.</p>
+  </div>
+
   <footer>
     &copy; <strong>2025 Fair Book Gallery | Designed by Ameer Ali Ranjhani</strong>
   </footer>
 
-<script>
-  window.addEventListener("load", function() {
-    // Delay of 1.5 seconds before hiding loader
-    setTimeout(function() {
-      document.getElementById("loader").style.display = "none";
-      document.getElementById("content").style.display = "block";
-    }, 1500); // 1500 milliseconds = 1.5 seconds
-  });
-</script>
-
-
-
+  <script>
+    window.addEventListener("load", function() {
+      setTimeout(function() {
+        document.getElementById("loader").style.display = "none";
+      }, 1500);
+    });
+  </script>
 </body>
 </html>
