--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Class 10th Fair books</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="Untitled_Project__1_-removebg-preview (1).png">
+  <meta name="google-site-verification" content="9Xx9FG1rDzQnvIDxGzGaPhr4iZsRkOvxPRbsw4lxstg" />
 
   <style>
     body {
