added some images

--- a/chemistry.html
+++ b/chemistry.html
@@ -125,6 +125,12 @@
       <div class="caption">Page 7</div>
     </div>
   </section>
+    <section class="gallery">
+    <div class="card">
+      <img src="chemistry fair book/8.jpeg" loading="lazy" class="lazy-img" alt="Page 8">
+      <div class="caption">Page 8</div>
+    </div>
+  </section>
   <a href="index.html" class="back-btn">← Back to Home</a>
 
   <footer>
