--- a/maths.html
+++ b/maths.html
@@ -269,6 +269,42 @@
       <div class="caption">Page 31</div>
     </div>
   </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/32.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 32">
+      <div class="caption">Page 32</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/33.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 33">
+      <div class="caption">Page 33</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/34.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 34">
+      <div class="caption">Page 34</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/35.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 35">
+      <div class="caption">Page 35</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/36.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 36">
+      <div class="caption">Page 36</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/37.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 37">
+      <div class="caption">Page 37</div>
+    </div>
+  </section>
     <a href="index.html" class="back-btn">← Back to Home</a>
 
 
