--- a/maths.html
+++ b/maths.html
@@ -305,6 +305,30 @@
       <div class="caption">Page 37</div>
     </div>
   </section>
+    <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/38.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 38">
+      <div class="caption">Page 38</div>
+    </div>
+  </section>
+    <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/39.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 39">
+      <div class="caption">Page 39</div>
+    </div>
+  </section>
+    <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/40.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 40">
+      <div class="caption">Page 40</div>
+    </div>
+  </section>
+    <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/41.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 41">
+      <div class="caption">Page 41</div>
+    </div>
+  </section>
     <a href="index.html" class="back-btn">← Back to Home</a>
 
 
