--- a/physics-rough.html
+++ b/physics-rough.html
@@ -124,6 +124,24 @@
       <div class="caption">Page 7</div>
     </div>
   </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="physics-rough fair book/8.jpeg"  loading="lazy" class="lazy-img"  alt="Page 8">
+      <div class="caption">Page 8</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="physics-rough fair book/9.jpeg"  loading="lazy" class="lazy-img"  alt="Page 9">
+      <div class="caption">Page 9</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="physics-rough fair book/10.jpeg"  loading="lazy" class="lazy-img"  alt="Page 10">
+      <div class="caption">Page 10</div>
+    </div>
+  </section>
    <a href="index.html" class="back-btn">← Back to Home</a>
 
   <footer>
