--- a/urdu.html
+++ b/urdu.html
@@ -166,6 +166,12 @@
       <div class="caption">Page 14</div>
     </div>
   </section>
+   <section class="gallery">
+    <div class="card">
+      <img src="Urdu fair book/15.jpeg"  loading="lazy" class="lazy-img"  alt="Page 15">
+      <div class="caption">Page 15</div>
+    </div>
+  </section>
   <br>
   <hr>
   <h1 style="font-size: 3rem; margin: 0%; text-align: center; color: #1e3a8a; ">Grammar Section</h1>
