--- a/chemistry.html
+++ b/chemistry.html
@@ -131,6 +131,41 @@
       <div class="caption">Page 8</div>
     </div>
   </section>
+  
+    <section class="gallery">
+    <div class="card">
+      <img src="chemistry fair book/9.jpeg" loading="lazy" class="lazy-img" alt="Page 9">
+      <div class="caption">Page 9</div>
+    </div>
+  </section>
+  
+    <section class="gallery">
+    <div class="card">
+      <img src="chemistry fair book/10.jpeg" loading="lazy" class="lazy-img" alt="Page 10">
+      <div class="caption">Page 10</div>
+    </div>
+  </section>
+  
+    <section class="gallery">
+    <div class="card">
+      <img src="chemistry fair book/11.jpeg" loading="lazy" class="lazy-img" alt="Page 11">
+      <div class="caption">Page 11</div>
+    </div>
+    </section>
+    
+    <section class="gallery">
+    <div class="card">
+      <img src="chemistry fair book/12.jpeg" loading="lazy" class="lazy-img" alt="Page 12">
+      <div class="caption">Page 12</div>
+    </div>
+  </section>
+  
+    <section class="gallery">
+    <div class="card">
+      <img src="chemistry fair book/13.jpeg" loading="lazy" class="lazy-img" alt="Page 13">
+      <div class="caption">Page 13</div>
+    </div>
+  </section>
   <a href="index.html" class="back-btn">← Back to Home</a>
 
   <footer>
