--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 
     .div-box {
       max-width: 800px;
-      margin: 50px auto;
-      padding: 25px;
+      margin: 15px auto;
+      padding: 15px;
       background-color: white;
       border-left: 6px solid #1e3a8a;
-      border-radius: 10px;
+      border-radius: 5px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       font-family: 'Segoe UI', sans-serif;
     }
@@ -130,6 +130,16 @@
 
   <h2 style="font-size: 30px; text-align: center; background: linear-gradient(to right, #26fd43 , #6b0d88, #6b0d88, #0000FF,#d61e1e, #c2ce19); -webkit-text-fill-color: transparent; -webkit-background-clip: text;">Al-Kausar High School Johi</h2>
 
+  <div class="div-box">
+    <h2>Updates on 07-08-2025</h2>
+    <ol>
+      <li><strong>Maths</strong></li>
+      <li><strong>Physics Rough</strong></li>
+      <li><strong>Urdu</strong></li>
+      <li><strong>Biology</strong></li>
+      <li><strong>Chemistry</strong></li>
+    </ol>
+  </div>
   <main class="container">
     <a href="english-exercise.html" class="card">English – Exercise</a>
     <a href="pak-study.html" class="card">Pakistan Studies</a>
@@ -141,16 +151,6 @@
     <a href="computer-science.html" class="card">Computer Science</a>
     <a href="urdu.html" class="card">Urdu</a>
   </main>
-
-  <div class="div-box">
-    <h2>Note:</h2>
-    <ol>
-      <li><strong>Maths 17.4 and 17.5, Chemistry Q.4 have been added on 05-08-2025.</strong></li>
-      <li><strong>Images can be uploaded late.</strong></li>
-      <li><strong>Wait for images.</strong></li>
-      <li><strong>Please reload the website and refer to Note 1 to check if new images have been uploaded.</strong></li>
-    </ol>
-  </div>
 
   <div class="div-box">
     <h2>Website Objective</h2>
