--- a/maths.html
+++ b/maths.html
@@ -329,7 +329,35 @@
       <div class="caption">Page 41</div>
     </div>
   </section>
-    <a href="index.html" class="back-btn">← Back to Home</a>
+    </section>
+    <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/42.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 42">
+      <div class="caption">Page 42</div>
+    </div>
+  </section>
+    </section>
+    <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/43.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 43">
+      <div class="caption">Page 43</div>
+    </div>
+  </section>
+    </section>
+    <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/44.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 44">
+      <div class="caption">Page 44</div>
+    </div>
+  </section>
+    </section>
+    <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/45.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 45">
+      <div class="caption">Page 45</div>
+    </div>
+  </section>
+    <a href="2maths.html" class="back-btn">Next 📌</a>
 
 
   <footer>
