--- a/physics-rough.html
+++ b/physics-rough.html
@@ -142,6 +142,12 @@
       <div class="caption">Page 10</div>
     </div>
   </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="physics-rough fair book/11.jpeg"  loading="lazy" class="lazy-img"  alt="Page 11">
+      <div class="caption">Page 11</div>
+    </div>
+  </section>
    <a href="index.html" class="back-btn">← Back to Home</a>
 
   <footer>
