--- a/index.html
+++ b/index.html
@@ -131,13 +131,11 @@
   <h2 style="font-size: 30px; text-align: center; background: linear-gradient(to right, #26fd43 , #6b0d88, #6b0d88, #0000FF,#d61e1e, #c2ce19); -webkit-text-fill-color: transparent; -webkit-background-clip: text;">Al-Kausar High School Johi</h2>
 
   <div class="div-box">
-    <h2>Updates on 07-08-2025</h2>
+    <h2>Updates on 08/12/2025</h2>
     <ol>
       <li><strong>Maths</strong></li>
-      <li><strong>Physics Rough</strong></li>
-      <li><strong>Urdu</strong></li>
-      <li><strong>Biology</strong></li>
-      <li><strong>Chemistry</strong></li>
+      <li><strong>physics-rough</strong></li>
+   
     </ol>
   </div>
   <main class="container">
