--- a/2maths.html
+++ b/2maths.html
@@ -82,12 +82,131 @@
     <h2>📐 Maths – Fair Book</h2>
   </header>
 
+ <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/26.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 26">
+      <div class="caption">Page 26</div>
+    </div>
+  </section>
   <section class="gallery">
     <div class="card">
-      <img src="maths fair book/1.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 1">
-      <div class="caption">Page 1</div>
+      <img src="maths fair book/27.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 27">
+      <div class="caption">Page 27</div>
     </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/28.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 28">
+      <div class="caption">Page 28</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/29.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 29">
+      <div class="caption">Page 29</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/30.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 30">
+      <div class="caption">Page 30</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/31.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 31">
+      <div class="caption">Page 31</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/32.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 32">
+      <div class="caption">Page 32</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/33.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 33">
+      <div class="caption">Page 33</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/34.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 34">
+      <div class="caption">Page 34</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/35.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 35">
+      <div class="caption">Page 35</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/36.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 36">
+      <div class="caption">Page 36</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/37.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 37">
+      <div class="caption">Page 37</div>
+    </div>
+  </section>
+    <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/38.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 38">
+      <div class="caption">Page 38</div>
+    </div>
+  </section>
+    <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/39.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 39">
+      <div class="caption">Page 39</div>
+    </div>
+  </section>
+    <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/40.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 40">
+      <div class="caption">Page 40</div>
+    </div>
+  </section>
+    <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/41.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 41">
+      <div class="caption">Page 41</div>
+    </div>
+  </section>
     </section>
+    <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/42.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 42">
+      <div class="caption">Page 42</div>
+    </div>
+  </section>
+    </section>
+    <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/43.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 43">
+      <div class="caption">Page 43</div>
+    </div>
+  </section>
+    </section>
+    <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/44.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 44">
+      <div class="caption">Page 44</div>
+    </div>
+  </section>
+    </section>
+    <section class="gallery">
+    <div class="card">
+      <img src="maths fair book/45.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 45">
+      <div class="caption">Page 45</div>
+    </div>
+  </section>
+  
 
     <a href="index.html" class="back-btn">← Back to Home</a>
 
